--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,14 +10,13 @@
 			"extensions": [
 				"ms-toolsai.jupyter",
 				"julialang.language-julia",
-				"0h7z.vscode-julia-format",
 				"jameselderfield.language-weave"
 			],
 			"settings": {
 				"terminal.integrated.shell": "/bin/bash",
 				"jupyter.experiments.optOutFrom": ["NativeNotebookEditor"],
 				"[julia]": {
-					"editor.defaultFormatter": "0h7z.vscode-julia-format",
+					"editor.defaultFormatter": "julialang.language-julia",
 					"editor.formatOnSave": true
 				}
 			}
