--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,29 @@
 {
-	"name": "Ubuntu",
-	"image": "jupyter/datascience-notebook:julia-1.9.3",
-	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {}
-	},
-	"postCreateCommand": "julia ./.devcontainer/init.jl",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-toolsai.jupyter",
-				"julialang.language-julia",
-				"jameselderfield.language-weave"
-			],
-			"settings": {
-				"terminal.integrated.shell": "/bin/bash",
-				"jupyter.experiments.optOutFrom": ["NativeNotebookEditor"],
-				"[julia]": {
-					"editor.defaultFormatter": "julialang.language-julia",
-					"editor.formatOnSave": true
-				}
-			}
-		}
-	}
+    "name": "Ubuntu",
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "devcontainer",
+    "workspaceFolder": "/workspace",
+    "features": {
+        "ghcr.io/devcontainers/features/common-utils:2": {}
+    },
+    "postCreateCommand": "julia ./.devcontainer/init.jl",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-toolsai.jupyter",
+                "julialang.language-julia",
+                "jameselderfield.language-weave"
+            ],
+            "settings": {
+                "terminal.integrated.shell": "/bin/bash",
+                "jupyter.experiments.optOutFrom": [
+                    "NativeNotebookEditor"
+                ],
+                "[julia]": {
+                    "editor.defaultFormatter": "julialang.language-julia",
+                    "editor.formatOnSave": true
+                }
+            }
+        }
+    }
 }
