Configure Git LFS

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,8 +6,9 @@ ENV JULIA_NUM_THREADS=24
 
 # Install Git LFS
 # https://github.com/git-lfs/git-lfs/blob/main/INSTALLING.md
-RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash && \
-    apt-get install git-lfs
+RUN apt-get update && \
+    curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash && \
+    apt-get install -y git-lfs
 
 RUN groupadd -f jovyan && \
     usermod -a -G jovyan jovyan
@@ -17,6 +18,7 @@ RUN mkdir -p /home/jovyan/.cursor-server/data/User/globalStorage/julialang.langu
     chmod -R u+rw /home/jovyan/.cursor-server
 
 COPY ./init.jl /home/jovyan/init.jl
-RUN julia /home/jovyan/init.jl
 
 USER jovyan
+
+RUN julia /home/jovyan/init.jl
