--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,22 @@
 {
-    "name": "Ubuntu",
-    "build": {
-        "dockerfile": "./Dockerfile"
-    },
-    "features": {
-        "ghcr.io/devcontainers/features/common-utils:2": {}
-    },
+    "name": "INULAB Julia Dev Container",
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "inulab_julia_devcontainer",
+    "workspaceFolder": "/workspaces/inulab_julia_devcontainer",
+    "remoteUser": "root",
     "customizations": {
         "vscode": {
             "extensions": [
                 "ms-toolsai.jupyter",
-                "julialang.language-julia",
-                "jameselderfield.language-weave",
-                "qwtel.sqlite-viewer"
+                "julialang.language-julia"
             ],
             "settings": {
-                "terminal.integrated.shell": "/bin/bash",
+                "terminal.integrated.shell.linux": "/bin/zsh",
                 "jupyter.experiments.optOutFrom": [
                     "NativeNotebookEditor"
                 ],
+               "julia.environmentPath": "/usr/local/bin/julia",
+               "julia.executablePath": "/usr/local/bin/julia",
                 "[julia]": {
                     "editor.defaultFormatter": "julialang.language-julia",
                     "editor.formatOnSave": true
