--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,12 +11,10 @@
                 "julialang.language-julia"
             ],
             "settings": {
-                "terminal.integrated.shell.linux": "/bin/zsh",
+                "terminal.integrated.defaultProfile.linux": "zsh",
                 "jupyter.experiments.optOutFrom": [
                     "NativeNotebookEditor"
                 ],
-               "julia.environmentPath": "/usr/local/bin/julia",
-               "julia.executablePath": "/usr/local/bin/julia",
                 "[julia]": {
                     "editor.defaultFormatter": "julialang.language-julia",
                     "editor.formatOnSave": true
